Store Front/CorePackage/main/default/objects/Cart__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>