Store Front/CorePackage/main/default/objects/Cart__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>