Store Front/CorePackage/main/default/objects/Cart__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <label>UserID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>